# macro_traffic_sim_grpc

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.local  Dockerfile.server  LICENSE  Makefile  NOTICE  README.md  publish.md
clients/go/: README.md  config.pb.go  go.mod  network.pb.go  results.pb.go  run.pb.go  service.pb.go  service_grpc.pb.go  session.pb.go  uuid.pb.go
clients/python/: README.md  pyproject.toml
clients/python/examples/: main.py
clients/python/macro_traffic_sim/: __init__.py  config_pb2.py  config_pb2.pyi  config_pb2_grpc.py  network_pb2.py  network_pb2.pyi  network_pb2_grpc.py  results_pb2.py  results_pb2.pyi  results_pb2_grpc.py  run_pb2.py  run_pb2.pyi  run_pb2_grpc.py  service_pb2.py  service_pb2.pyi  service_pb2_grpc.py  session_pb2.py  session_pb2.pyi  uuid_pb2.py  uuid_pb2_grpc.py
examples/rust_client/: main.rs
protos/: config.proto  network.proto  results.proto  run.proto  service.proto  session.proto  uuid.proto
scripts/: build_release.sh  gen_go.sh  gen_python.sh
src/: build.rs  lib.rs  main.rs  server.rs
src/server/: config.rs  network.rs  results.rs  run.rs  sessions.rs
